--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,10 @@
 RewriteEngine On
-RewriteBase /
+Header set ngrok-skip-browser-warning "true"
 
 # Se o arquivo ou diretório não existir
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [L]
+RewriteRule ^(.*)$ index.php [QSA,L]
 
 # Permitir acesso aos arquivos PHP
 <FilesMatch "\.php$">
